Fix text overflow in Timestamp Microservice

--- a/Apis_And_Microservices_Certification/Timestamp_Microservice/style.css
+++ b/Apis_And_Microservices_Certification/Timestamp_Microservice/style.css
@@ -39,6 +39,7 @@ input[type=submit] {
 .code-wrapper {
   background: #313131;
   padding: 1rem;
+  word-break: break-word;
 }
 footer {
   background: rgba(0, 0, 0, 0.2);
